# Scout

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scout_backend/: __init__.py  main.py
scout_backend/api/: deps.py  routes.py  schemas.py
scout_backend/core/: config.py  security.py
scout_backend/models/: database.py  entities.py
scout_backend/services/: audit.py  dashboard.py  github.py  integrations.py  reasoning.py  scoring.py
sdks/python/: README.md  pyproject.toml
sdks/python/scout_execution/: __init__.py  client.py
sdks/typescript/: README.md  package.json
sdks/typescript/src/: index.ts
tests/: test_api.py
